packages/svelte/tests/compiler-errors/samples/css-global-block-combinator/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'css_global_block_invalid_combinator',
		message: 'A :global {...} block cannot follow a > combinator',
		position: [12, 21]
	}
});
